Clarify the scope of AtomGrid (beyond just QM)

--- a/doc/notebooks/Atom_Grid.ipynb
+++ b/doc/notebooks/Atom_Grid.ipynb
@@ -8,16 +8,14 @@
       "source": [
         "# Atom Grids\n",
         "\n",
-        "[AtomGrid](https://grid.qcdevs.org/pyapi/grid.atomgrid.html#grid.atomgrid.AtomGrid) constructs an atomic grid by combining a radial and angular components for evaluation, integration, interpolation, and differentiation in three-dimensional (3D) space.\n",
+        "[AtomGrid](https://grid.qcdevs.org/pyapi/grid.atomgrid.html#grid.atomgrid.AtomGrid) constructs an atomic grid by combining a radial and angular components for evaluation, integration, interpolation, and differentiation in three-dimensional (3D) space. In quantum chemistry, this is typically used for computations of atomic properties. However, this is a general purpose grid that can be used for any function in 3D space.\n",
         "\n",
-        "This notebook showcases various functionalities of [AtomGrid](https://grid.qcdevs.org/pyapi/grid.atomgrid.html#grid.atomgrid.AtomGrid) using $\\textbf{He}$ in the triplet state ($1s^1 2s^1$) as an example. The corresponding wavefunction is obtained from formatted checkpoint file `\"doc/notebooks/He_t.fchk\"`.\n",
-        "\n",
-        "The [`qc-iodata`](https://github.com/theochem/iodata) package is used for parsing the wavefuction data from the fchk file, and [`qc-gbasis`](https://github.com/theochem/gbasis) package is used for analytical evaluation of various properties in the grid.\n"
+        "This notebook showcases various functionalities of [AtomGrid](https://grid.qcdevs.org/pyapi/grid.atomgrid.html#grid.atomgrid.AtomGrid). For computing properties on the grid, we use $\\textbf{He}$ in the triplet state ($1s^1 2s^1$) as an example. The corresponding wavefunction is obtained from formatted checkpoint file `\"doc/notebooks/He_t.fchk\"`. The [`qc-iodata`](https://github.com/theochem/iodata) package is used for parsing the wavefuction data from the fchk file, and [`qc-gbasis`](https://github.com/theochem/gbasis) package is used for analytical evaluation of various properties in the grid.\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 28,
       "metadata": {},
       "outputs": [
         {
@@ -34,9 +32,10 @@
       "source": [
         "from iodata import load_one\n",
         "\n",
-        "# Get the atomic coordinates and numbers\n",
+        "# Get the atomic coordinates array to use as the center of the grid\n",
         "mol = load_one(\"He_t.fchk\")\n",
         "\n",
+        "center = mol.atcoords\n",
         "print(f\"Atomic Coordinates: {mol.atcoords}\")\n",
         "print(f\"Atomic numbers    : {mol.atnums}\")\n",
         "print(f\"Alpha MO occupations: {mol.mo.occsa}\")\n",
@@ -49,14 +48,14 @@
       "source": [
         "## Construct Atomic Grid\n",
         "\n",
-        "There are multiple ways to construct an atomic grid; for a complete description see the [Atomic_Grid_Construction.ipynb]().\n",
+        "There are multiple ways to construct an atomic grid, for a complete description see the [Atomic_Grid_Construction.ipynb]().\n",
         "\n",
-        "Here we can construct an atomic grid by specifying a radial grid and the degree of the angular grid. The radial grid is constructed by specifying the number of radial grid points. For more details on the radial and angular grids see [Radial_Grid.ipynb]() and [Angular_Grid.ipynb]().\n"
+        "Here we construct an atomic grid from a radial grid instance and the degrees of the angular grid centered at the position of $\\textbf{He}$ nucleus. The radial grid is constructed by specifying the number of radial grid points. For more details on the radial and angular grids see [Radial_Grid.ipynb]() and [Angular_Grid.ipynb]().\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 29,
       "metadata": {},
       "outputs": [
         {
@@ -88,7 +87,8 @@
         "print(f\"Radial grid r_min: {np.min(rgrid.points):.5f}\")\n",
         "print(f\"Radial grid r_max: {np.max(rgrid.points):.5f}\\n\")\n",
         "\n",
-        "atgrid = AtomGrid(rgrid, degrees=[22])\n",
+        "# construct atomic grid\n",
+        "atgrid = AtomGrid(rgrid, degrees=[22], center=center)\n",
         "\n",
         "# atomic grid size = (radial grid size) * (angular grid size)\n",
         "print(f\"AtomGrid size          : {atgrid.size}\")\n",
@@ -105,12 +105,12 @@
       "source": [
         "### Example: Integrate Electron Density\n",
         "\n",
-        "To integrate a scalar function over the atomic grid, we first need to evaluate the function on the grid points. Here, we compute the electron density $\\rho(\\mathbf{r})$ of the $\\textbf{He}$ using the [`gbasis.evals.density`]() function of the [gbasis](https://github.com/theochem/gbasis) package. The density values are then integrated using the [`AtomGrid.integrate`](https://grid.qcdevs.org/pyapi/grid.basegrid.html#grid.basegrid.Grid.integrate) method.\n"
+        "To integrate a scalar function over the atomic grid, we first need to evaluate the function on the grid points. Here, we compute the electron density $\\rho(\\mathbf{r})$ of the $\\textbf{He}$ in the triplet state ($1s^1 2s^1$) using the [`gbasis.evals.density`]() function of the [`qc-gbasis`](https://github.com/theochem/gbasis) package. The wavefunction data are loaded from the formatted checkpoint file using [`load_one`](https://iodata.readthedocs.io/en/latest/pyapi/iodata.api.html#iodata.api.load_one) function of [`qc-iodata`](https://github.com/theochem/iodata)package. The density values are then integrated using the [`AtomGrid.integrate`](https://grid.qcdevs.org/pyapi/grid.basegrid.html#grid.basegrid.Grid.integrate) method.\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 30,
       "metadata": {},
       "outputs": [
         {
@@ -126,6 +126,9 @@
       "source": [
         "from gbasis.wrappers import from_iodata\n",
         "from gbasis.evals.density import evaluate_density\n",
+        "\n",
+        "# Check that the atomic grid is centered at the position of atomic nucleus\n",
+        "assert np.all(mol.atcoords == atgrid.center)\n",
         "\n",
         "# Construct molecular basis from wave-function information read by IOData\n",
         "basis, type = from_iodata(mol)\n",
@@ -161,7 +164,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 31,
       "metadata": {},
       "outputs": [
         {
@@ -203,7 +206,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 32,
       "metadata": {},
       "outputs": [
         {
