--- a/doc/notebooks/Atom_Grid_Construction.ipynb
+++ b/doc/notebooks/Atom_Grid_Construction.ipynb
@@ -236,6 +236,7 @@
       "source": [
         "# Create an atom grid using AtomGrid.from_pruned\n",
         "\n",
+        "# example: covalent radius of lithium\n",
         "radius = 2.418849439520986\n",
         "# radial sector 1 covers [0, 0.5 * radius], sector 2 covers [0.5 * radius, radius], etc.\n",
         "# each sector has a different number of angular points defined by sectors_d\n",
@@ -429,7 +430,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.5"
+      "version": "3.10.12"
     }
   },
   "nbformat": 4,
