Add utility function for selecting domains

--- a/doc/notebooks/Quickstart.ipynb
+++ b/doc/notebooks/Quickstart.ipynb
@@ -578,6 +578,83 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Example: Selecting domains and integrating over them (Condensed dual descriptor)\n",
+    "\n",
+    "Different from other packages, where uniform and cubic grids are only used for visualization purposes, in Grid, these grids can be used to integrate and interpolate functions. Here we will use a cubic Tensor1D gid to select and integrate the lobes of the dual descriptor of the formaldehyde molecule.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Define utility function for selecting domains of same sign points"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define utility function for grouping points in domains\n",
+    "\n",
+    "from itertools import combinations\n",
+    "from scipy.sparse.csgraph import connected_components\n",
+    "\n",
+    "\n",
+    "# function to get grid points indices for same sign connected points with absolute\n",
+    "# value  greater than a threshold (select domain defined by isovalue)\n",
+    "def get_domains(grid, vals, isovalue):\n",
+    "    # indices of points with value modulus greater than isovalue\n",
+    "    idx_p_vals = np.where(vals > isovalue)[0]  # positive values\n",
+    "    idx_n_vals = np.where(vals < -isovalue)[0]  # negative values\n",
+    "\n",
+    "    # create adjacency matrix selected points with same sign\n",
+    "    p_vals_adj = np.zeros((len(idx_p_vals), len(idx_p_vals)))\n",
+    "    n_vals_adj = np.zeros((len(idx_n_vals), len(idx_n_vals)))\n",
+    "\n",
+    "    # try all combinations of selected points with same sign (positive values)\n",
+    "    for i, j in combinations(range(len(idx_p_vals)), 2):\n",
+    "        # get coordinate indices of the points\n",
+    "        i_coord_idx = np.array(grid.index_to_coordinates(idx_p_vals[i]))\n",
+    "        j_coord_idx = np.array(grid.index_to_coordinates(idx_p_vals[j]))\n",
+    "        # two points are adjacent if they differ by at most 1 in each coordinate index\n",
+    "        if np.max(np.abs(i_coord_idx - j_coord_idx)) == 1:\n",
+    "            p_vals_adj[i, j] = 1\n",
+    "\n",
+    "    # try all combinations of selected points with same sign (negative values)\n",
+    "    for i, j in combinations(range(len(idx_n_vals)), 2):\n",
+    "        i_coord_idx = np.array(grid.index_to_coordinates(idx_n_vals[i]))\n",
+    "        j_coord_idx = np.array(grid.index_to_coordinates(idx_n_vals[j]))\n",
+    "        # two points are adjacent if they differ by at most 1 in each coordinate\n",
+    "        if np.max(np.abs(i_coord_idx - j_coord_idx)) == 1:\n",
+    "            n_vals_adj[i, j] = 1\n",
+    "\n",
+    "    # returns an array of integers, each integer represents domain and the indexes where\n",
+    "    # it appear are the points belonging to that domain\n",
+    "    # example: [0,1,0,0,1,1] -> points 0,2,3 belong to domain 0\n",
+    "    #                        -> points 1,4,5 belong to domain 1\n",
+    "    p_groups = connected_components(p_vals_adj, directed=False)[1]\n",
+    "    n_groups = connected_components(n_vals_adj, directed=False)[1]\n",
+    "\n",
+    "    # creates a list with the domains. Each element of the list is a np.array with the indexes\n",
+    "    # of the selected points that belong to the same domain.\n",
+    "    # example: [0,1,0,0,1,1] -> [[0,2,3],[1,4,5]]\n",
+    "    p_domains = list([np.where(p_groups == i)[0] for i in range(max(p_groups) + 1)])\n",
+    "    n_domains = list([np.where(n_groups == i)[0] for i in range(max(n_groups) + 1)])\n",
+    "\n",
+    "    # transform indexes of selected points to indexes of all grid points for each domain\n",
+    "    p_domains = [idx_p_vals[domain] for domain in p_domains]\n",
+    "    n_domains = [idx_n_vals[domain] for domain in n_domains]\n",
+    "\n",
+    "    return p_domains, n_domains"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Periodic Grid\n",
     "\n",
     "[Periodic grids](../pyapi/grid.periodicgrid) used to evaluate integrals over periodic systems. These grid support models for wires, surfaces or solids.\n"
