Add example of integration of atomic add_local_property
Added an example of integration of atomic (inside molecule)
property (electron density -> atomic charge).

--- a/doc/notebooks/Molecular_Grid.ipynb
+++ b/doc/notebooks/Molecular_Grid.ipynb
@@ -2,6 +2,9 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "collapsed": false
+      },
       "source": [
         "# Molecular Grids\n",
         "\n",
@@ -9,20 +12,17 @@
         "\n",
         "The format checkpoint file wavefunction is included in \"doc/notebooks/ch2o_q+0.fchk\" and is\n",
         "read using the [IOData](https://github.com/theochem/iodata) package."
-      ],
-      "metadata": {
-        "collapsed": false
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 25,
       "metadata": {
-        "collapsed": true,
         "ExecuteTime": {
           "end_time": "2023-05-18T16:47:59.203357490Z",
           "start_time": "2023-05-18T16:47:58.867656425Z"
-        }
+        },
+        "collapsed": true
       },
       "outputs": [
         {
@@ -51,16 +51,23 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "The first step to constructing a molecular grid is to define a radial grid to integrate over the radial coordinate.  This is done by first defining a GaussLegendre grid over $[-1, 1]$ and transforming it to $[0, \\infty)$ using a Becke Transformation."
-      ],
       "metadata": {
         "collapsed": false
-      }
+      },
+      "source": [
+        "The first step to constructing a molecular grid is to define a radial grid to integrate over the radial coordinate.  This is done by first defining a GaussLegendre grid over $[-1, 1]$ and transforming it to $[0, \\infty)$ using a Becke Transformation."
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 26,
+      "metadata": {
+        "ExecuteTime": {
+          "end_time": "2023-05-18T16:48:01.272238929Z",
+          "start_time": "2023-05-18T16:48:00.739624430Z"
+        },
+        "collapsed": false
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -101,27 +108,27 @@
         "print(f\"One-dimesional points \\n {oned_grid.points}\")\n",
         "radial_grid = BeckeRTransform(0.0, R=1.5).transform_1d_grid(oned_grid)  #BeckeRTransform(0.0, R=2.0).transform_1d_grid(oned_grid)\n",
         "print(f\"Transformed points \\n {radial_grid.points}\")"
-      ],
-      "metadata": {
-        "collapsed": false,
-        "ExecuteTime": {
-          "end_time": "2023-05-18T16:48:01.272238929Z",
-          "start_time": "2023-05-18T16:48:00.739624430Z"
-        }
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Once a radial grid is defined, there are several methods to constructing a molecular grid. The simplest of such method is used. Here, Becke weights are used as an atom in molecule weights."
-      ],
       "metadata": {
         "collapsed": false
-      }
+      },
+      "source": [
+        "Once a radial grid is defined, there are several methods to constructing a molecular grid. The simplest of such method is used. Here, Becke weights are used as an atom in molecule weights."
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 27,
+      "metadata": {
+        "ExecuteTime": {
+          "end_time": "2023-05-18T16:48:02.836108707Z",
+          "start_time": "2023-05-18T16:48:02.704710630Z"
+        },
+        "collapsed": false
+      },
       "outputs": [],
       "source": [
         "from grid.becke import BeckeWeights\n",
@@ -144,37 +151,37 @@
         "#     size=50,                    # The angular degree of the atomic grid over each carbon, and hydrogen.\n",
         "#     aim_weights=BeckeWeights(), # Atom-in molecular weights: Becke weights\n",
         "# )"
-      ],
-      "metadata": {
-        "collapsed": false,
-        "ExecuteTime": {
-          "end_time": "2023-05-18T16:48:02.836108707Z",
-          "start_time": "2023-05-18T16:48:02.704710630Z"
-        }
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "collapsed": false
+      },
       "source": [
         "### Integration\n",
         "\n",
         "##### Example: Electron Density\n",
         "\n",
         "This example shows how to use molecular grids to integrate the electron density $\\rho(\\textbf{r})$. This should equal to the number of electrons 16 of Formaldehyde. This is calculated using the [gbasis](https://github.com/theochem/gbasis) package"
-      ],
-      "metadata": {
-        "collapsed": false
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 28,
+      "metadata": {
+        "ExecuteTime": {
+          "end_time": "2023-05-18T16:48:05.389647782Z",
+          "start_time": "2023-05-18T16:48:04.376467773Z"
+        },
+        "collapsed": false
+      },
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Integration of the electron density: 15.999987778747279.\n"
+            "Integration of the electron density: 15.99998777995761.\n"
           ]
         }
       ],
@@ -191,37 +198,81 @@
         "\n",
         "# Integrate using the molecular grid\n",
         "print(f\"Integration of the electron density: {mol_grid.integrate(electron_density)}.\")"
-      ],
-      "metadata": {
-        "collapsed": false,
-        "ExecuteTime": {
-          "end_time": "2023-05-18T16:48:05.389647782Z",
-          "start_time": "2023-05-18T16:48:04.376467773Z"
-        }
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Local properties\n",
+        "\n",
+        "##### Example: Atomic charges from molecular electron density\n",
+        "\n",
+        "This example shows how to get extract grids from a molecular grid and integrate the electron density to get atomic charges. "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 34,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Molecular grid has 16448 points.\n",
+            "Oxygen grid has 4980 points.\n",
+            "Integration of the Oxygen atom electron density on the Oxygen grid: 6.213950819473563.\n",
+            "Atomic charge of the Oxygen atom: -0.21395081947356331.\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Extract the atomic grid of the Oxygen atom\n",
+        "o_grid, o_idcs = mol_grid.get_atomic_grid(1)\n",
+        "\n",
+        "print(f\"Molecular grid has {len(mol_grid.points)} points.\")\n",
+        "print(f\"Oxygen grid has {len(o_grid.points)} points.\")\n",
+        "\n",
+        "# Extract electron density on the Oxygen grid points\n",
+        "o_electron_density = electron_density[o_idcs] * mol_grid.aim_weights[o_idcs]\n",
+        "\n",
+        "# Integrate using the atomic grid\n",
+        "o_charge = o_grid.integrate(o_electron_density)\n",
+        "\n",
+        "print(f\"Integration of the Oxygen atom electron density on the Oxygen grid: {o_charge}.\")\n",
+        "print(f\"Atomic charge of the Oxygen atom: {mol.atnums[1] - o_charge}.\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "collapsed": false
+      },
       "source": [
         "### Interpolation\n",
         "\n",
         "##### Example: Electron Density\n",
         "\n",
         "This example shows how to interpolate any function using molecular grids.  The electron density is used again here as the example."
-      ],
-      "metadata": {
-        "collapsed": false
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 30,
+      "metadata": {
+        "ExecuteTime": {
+          "end_time": "2023-05-18T16:48:06.926137896Z",
+          "start_time": "2023-05-18T16:48:06.253765458Z"
+        },
+        "collapsed": false
+      },
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Max Error 0.001302904658059434,  Mean Error 3.500902876292755e-05,  Std Dev 0.0001483415813999016\n"
+            "Max Error 0.0015376174981383704,  Mean Error 3.558509933012941e-05,  Std Dev 0.00018398862709285535\n"
           ]
         }
       ],
@@ -241,17 +292,13 @@
         "# Look at the error-difference\n",
         "err = np.abs(inter_vals - actual_vals)\n",
         "print(f\"Max Error {np.max(err)},  Mean Error {np.mean(err)},  Std Dev {np.std(err)}\")\n"
-      ],
-      "metadata": {
-        "collapsed": false,
-        "ExecuteTime": {
-          "end_time": "2023-05-18T16:48:06.926137896Z",
-          "start_time": "2023-05-18T16:48:06.253765458Z"
-        }
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "collapsed": false
+      },
       "source": [
         "### Derivative Interpolation\n",
         "\n",
@@ -261,20 +308,24 @@
         "    $$\\tau_W (\\textbf{r}) = \\frac{1}{8} \\frac{|\\nabla \\rho(\\textbf{r}) |^2}{\\rho(\\textbf{r})}. $$\n",
         "\n",
         "This example will show how to interpolate the Weizsacker kinetic energy density using the interpolation of the electron density $\\rho(\\textbf{r})$."
-      ],
-      "metadata": {
-        "collapsed": false
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 31,
+      "metadata": {
+        "ExecuteTime": {
+          "end_time": "2023-05-18T16:48:09.998527980Z",
+          "start_time": "2023-05-18T16:48:08.697737663Z"
+        },
+        "collapsed": false
+      },
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Max Error 0.0015169498269268777,  Mean Error 7.528647116405785e-05,  Std Dev 0.00023846069080800918\n"
+            "Max Error 0.004600786588553145,  Mean Error 0.0001242796478961588,  Std Dev 0.0006439253164738305\n"
           ]
         }
       ],
@@ -295,17 +346,13 @@
         "\n",
         "err = np.abs(kinetic_dens - kinetic_interp)\n",
         "print(f\"Max Error {np.max(err)},  Mean Error {np.mean(err)},  Std Dev {np.std(err)}\")"
-      ],
-      "metadata": {
-        "collapsed": false,
-        "ExecuteTime": {
-          "end_time": "2023-05-18T16:48:09.998527980Z",
-          "start_time": "2023-05-18T16:48:08.697737663Z"
-        }
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "collapsed": false
+      },
       "source": [
         "### Solving Poisson Equation\n",
         "\n",
@@ -319,20 +366,24 @@
         "\n",
         "This can be used to calculate the electrostatic potential of a molecule with coordinates $\\{R_A\\}$ and charge $\\{Z_A\\}$:\n",
         "    $$\\Phi(\\textbf{r}_1) = -\\int \\frac{\\rho(\\textbf{r}_2)}{| \\textbf{r}_1 - \\textbf{r}_2 | } d\\textbf{r}_2 + \\sum_{A} \\frac{Z_A}{|\\textbf{r}_1 - R_A|}$$"
-      ],
-      "metadata": {
-        "collapsed": false
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 32,
+      "metadata": {
+        "ExecuteTime": {
+          "end_time": "2023-05-18T16:48:35.841955440Z",
+          "start_time": "2023-05-18T16:48:12.316718019Z"
+        },
+        "collapsed": false
+      },
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Max Error 0.015115750096519776,  Mean Error 0.0038874435708785506,  Std Dev 0.0032290409703695498\n"
+            "Max Error 0.019291163715498688,  Mean Error 0.00380434252559492,  Std Dev 0.0029074952998294373\n"
           ]
         }
       ],
@@ -363,14 +414,7 @@
         "\n",
         "err = np.abs(desired_potential - actual_potential)\n",
         "print(f\"Max Error {np.max(err)},  Mean Error {np.mean(err)},  Std Dev {np.std(err)}\")"
-      ],
-      "metadata": {
-        "collapsed": false,
-        "ExecuteTime": {
-          "end_time": "2023-05-18T16:48:35.841955440Z",
-          "start_time": "2023-05-18T16:48:12.316718019Z"
-        }
-      }
+      ]
     }
   ],
   "metadata": {
@@ -382,14 +426,14 @@
     "language_info": {
       "codemirror_mode": {
         "name": "ipython",
-        "version": 2
+        "version": 3
       },
       "file_extension": ".py",
       "mimetype": "text/x-python",
       "name": "python",
       "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython2",
-      "version": "2.7.6"
+      "pygments_lexer": "ipython3",
+      "version": "3.10.12"
     }
   },
   "nbformat": 4,
