Update gbasis from_iodata API change
This API change is described in https://github.com/theochem/gbasis/pull/140

--- a/doc/notebooks/Atom_Grid.ipynb
+++ b/doc/notebooks/Atom_Grid.ipynb
@@ -131,11 +131,11 @@
         "assert np.all(mol.atcoords == atgrid.center)\n",
         "\n",
         "# Construct molecular basis from wave-function information read by IOData\n",
-        "basis, type = from_iodata(mol)\n",
+        "basis = from_iodata(mol)\n",
         "\n",
         "# Evaluate the electron density on the grid points\n",
         "rdm = mol.one_rdms[\"scf\"]\n",
-        "dens = evaluate_density(rdm, basis, atgrid.points, coord_type=type)\n",
+        "dens = evaluate_density(rdm, basis, atgrid.points)\n",
         "print(f\"Shape of electron density array : {dens.shape}\")\n",
         "\n",
         "# Integrate electron density\n",
