Add a comment for finding local maxima of radial density

--- a/doc/notebooks/Atom_Grid.ipynb
+++ b/doc/notebooks/Atom_Grid.ipynb
@@ -212,19 +212,29 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "To identify the local maxima of radial electron density and corresponding radii, the [`scipy.signal.find_peaks`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.signal.find_peaks.html) is used.\n"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "The first peak of radial electron density is at 0.40794 bohr\n",
-            "The radial electron density at the first peak is 1.56127 a.u.\n",
+            "Peak 0 of radial electron density has:\n",
+            "   radius = 0.40162 bohr\n",
+            "   radial density = 1.56127 a.u.\n",
             "\n",
-            "The second peak of radial electron density is at 1.63157 bohr\n",
-            "The radial electron density at the second peak is 0.75479 a.u.\n"
+            "Peak 1 of radial electron density has:\n",
+            "   radius = 1.59695 bohr\n",
+            "   radial density = 0.75479 a.u.\n",
+            "\n"
           ]
         }
       ],
@@ -232,10 +242,11 @@
         "from scipy.signal import find_peaks\n",
         "\n",
         "peaks, _ = find_peaks(radial_dens_1)\n",
-        "print(f\"The first peak of radial electron density is at {rgrid.points[peaks[0]]:.5f} bohr\")\n",
-        "print(f\"The radial electron density at the first peak is {radial_dens_1[peaks[0]]:.5f} a.u.\\n\")\n",
-        "print(f\"The second peak of radial electron density is at {rgrid.points[peaks[1]]:.5f} bohr\")\n",
-        "print(f\"The radial electron density at the second peak is {radial_dens_1[peaks[1]]:.5f} a.u.\")"
+        "\n",
+        "for i, peak in enumerate(peaks):\n",
+        "    print(f\"Peak {i} of radial electron density has:\")\n",
+        "    print(f\"   radius = {rgrid.points[peak]:.5f} bohr\")\n",
+        "    print(f\"   radial density = {radial_dens_1[peak]:.5f} a.u.\\n\")"
       ]
     },
     {
