--- a/doc/notebooks/Molecular_Grid.ipynb
+++ b/doc/notebooks/Molecular_Grid.ipynb
@@ -2,6 +2,9 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "collapsed": false
+      },
       "source": [
         "# Molecular Grids\n",
         "\n",
@@ -9,20 +12,17 @@
         "\n",
         "The format checkpoint file wavefunction is included in \"doc/notebooks/ch2o_q+0.fchk\" and is\n",
         "read using the [IOData](https://github.com/theochem/iodata) package."
-      ],
-      "metadata": {
-        "collapsed": false
-      }
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
-        "collapsed": true,
         "ExecuteTime": {
           "end_time": "2023-05-18T16:47:59.203357490Z",
           "start_time": "2023-05-18T16:47:58.867656425Z"
-        }
+        },
+        "collapsed": true
       },
       "outputs": [
         {
@@ -51,16 +51,23 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "The first step to constructing a molecular grid is to define a radial grid to integrate over the radial coordinate.  This is done by first defining a GaussLegendre grid over $[-1, 1]$ and transforming it to $[0, \\infty)$ using a Becke Transformation."
-      ],
       "metadata": {
         "collapsed": false
-      }
+      },
+      "source": [
+        "The first step to constructing a molecular grid is to define a radial grid to integrate over the radial coordinate.  This is done by first defining a GaussLegendre grid over $[-1, 1]$ and transforming it to $[0, \\infty)$ using a Becke Transformation."
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": 2,
+      "metadata": {
+        "ExecuteTime": {
+          "end_time": "2023-05-18T16:48:01.272238929Z",
+          "start_time": "2023-05-18T16:48:00.739624430Z"
+        },
+        "collapsed": false
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -101,27 +108,27 @@
         "print(f\"One-dimesional points \\n {oned_grid.points}\")\n",
         "radial_grid = BeckeRTransform(0.0, R=1.5).transform_1d_grid(oned_grid)  #BeckeRTransform(0.0, R=2.0).transform_1d_grid(oned_grid)\n",
         "print(f\"Transformed points \\n {radial_grid.points}\")"
-      ],
-      "metadata": {
-        "collapsed": false,
-        "ExecuteTime": {
-          "end_time": "2023-05-18T16:48:01.272238929Z",
-          "start_time": "2023-05-18T16:48:00.739624430Z"
-        }
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Once a radial grid is defined, there are several methods to constructing a molecular grid. The simplest of such method is used. Here, Becke weights are used as an atom in molecule weights."
-      ],
       "metadata": {
         "collapsed": false
-      }
+      },
+      "source": [
+        "Once a radial grid is defined, there are several methods to constructing a molecular grid. The simplest of such method is used. Here, Becke weights are used as an atom in molecule weights."
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": 3,
+      "metadata": {
+        "ExecuteTime": {
+          "end_time": "2023-05-18T16:48:02.836108707Z",
+          "start_time": "2023-05-18T16:48:02.704710630Z"
+        },
+        "collapsed": false
+      },
       "outputs": [],
       "source": [
         "from grid.becke import BeckeWeights\n",
@@ -144,31 +151,31 @@
         "#     size=50,                    # The angular degree of the atomic grid over each carbon, and hydrogen.\n",
         "#     aim_weights=BeckeWeights(), # Atom-in molecular weights: Becke weights\n",
         "# )"
-      ],
-      "metadata": {
-        "collapsed": false,
-        "ExecuteTime": {
-          "end_time": "2023-05-18T16:48:02.836108707Z",
-          "start_time": "2023-05-18T16:48:02.704710630Z"
-        }
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "collapsed": false
+      },
       "source": [
         "### Integration\n",
         "\n",
         "##### Example: Electron Density\n",
         "\n",
         "This example shows how to use molecular grids to integrate the electron density $\\rho(\\textbf{r})$. This should equal to the number of electrons 16 of Formaldehyde. This is calculated using the [gbasis](https://github.com/theochem/gbasis) package"
-      ],
-      "metadata": {
-        "collapsed": false
-      }
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": 4,
+      "metadata": {
+        "ExecuteTime": {
+          "end_time": "2023-05-18T16:48:05.389647782Z",
+          "start_time": "2023-05-18T16:48:04.376467773Z"
+        },
+        "collapsed": false
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -191,31 +198,79 @@
         "\n",
         "# Integrate using the molecular grid\n",
         "print(f\"Integration of the electron density: {mol_grid.integrate(electron_density)}.\")"
-      ],
-      "metadata": {
-        "collapsed": false,
-        "ExecuteTime": {
-          "end_time": "2023-05-18T16:48:05.389647782Z",
-          "start_time": "2023-05-18T16:48:04.376467773Z"
-        }
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Local properties\n",
+        "\n",
+        "##### Example: Atomic charges from molecular electron density\n",
+        "\n",
+        "This example shows how to get extract atomic grids from a molecular grid and integrate the electron density to get atomic charges. "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 17,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Molecular grid has 16448 points.\n",
+            "Oxygen grid has 4980 points.\n",
+            "Integration of the Oxygen atom electron density on the Oxygen grid: 6.213950819473563.\n",
+            "Atomic charge of the Oxygen atom: -0.21395081947356331.\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Extract the atomic grid of the Oxygen atom\n",
+        "atom_index = 1\n",
+        "o_grid = mol_grid.get_atomic_grid(atom_index)\n",
+        "print(f\"Molecular grid has {len(mol_grid.points)} points.\")\n",
+        "print(f\"Oxygen grid has {len(o_grid.points)} points.\")\n",
+        "\n",
+        "# partition electron density into atomic electron densities (each point is assigned to an atom)\n",
+        "# 1. Every point is weighted by the Becke weight of the atom it is assigned to\n",
+        "w_electron_density = electron_density * mol_grid.aim_weights\n",
+        "# 2. Extract electron density values of points assigned to the Oxygen atom\n",
+        "o_idcs = np.arange(mol_grid.indices[atom_index], mol_grid.indices[atom_index + 1])\n",
+        "o_electron_density = w_electron_density[o_idcs]\n",
+        "\n",
+        "# Integrate using the atomic grid\n",
+        "o_charge = o_grid.integrate(o_electron_density)\n",
+        "\n",
+        "print(f\"Integration of the Oxygen atom electron density on the Oxygen grid: {o_charge}.\")\n",
+        "print(f\"Atomic charge of the Oxygen atom: {mol.atnums[1] - o_charge}.\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "collapsed": false
+      },
       "source": [
         "### Interpolation\n",
         "\n",
         "##### Example: Electron Density\n",
         "\n",
         "This example shows how to interpolate any function using molecular grids.  The electron density is used again here as the example."
-      ],
-      "metadata": {
-        "collapsed": false
-      }
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": 5,
+      "metadata": {
+        "ExecuteTime": {
+          "end_time": "2023-05-18T16:48:06.926137896Z",
+          "start_time": "2023-05-18T16:48:06.253765458Z"
+        },
+        "collapsed": false
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -241,17 +296,13 @@
         "# Look at the error-difference\n",
         "err = np.abs(inter_vals - actual_vals)\n",
         "print(f\"Max Error {np.max(err)},  Mean Error {np.mean(err)},  Std Dev {np.std(err)}\")\n"
-      ],
-      "metadata": {
-        "collapsed": false,
-        "ExecuteTime": {
-          "end_time": "2023-05-18T16:48:06.926137896Z",
-          "start_time": "2023-05-18T16:48:06.253765458Z"
-        }
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "collapsed": false
+      },
       "source": [
         "### Derivative Interpolation\n",
         "\n",
@@ -261,14 +312,18 @@
         "    $$\\tau_W (\\textbf{r}) = \\frac{1}{8} \\frac{|\\nabla \\rho(\\textbf{r}) |^2}{\\rho(\\textbf{r})}. $$\n",
         "\n",
         "This example will show how to interpolate the Weizsacker kinetic energy density using the interpolation of the electron density $\\rho(\\textbf{r})$."
-      ],
-      "metadata": {
-        "collapsed": false
-      }
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": 6,
+      "metadata": {
+        "ExecuteTime": {
+          "end_time": "2023-05-18T16:48:09.998527980Z",
+          "start_time": "2023-05-18T16:48:08.697737663Z"
+        },
+        "collapsed": false
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -295,17 +350,13 @@
         "\n",
         "err = np.abs(kinetic_dens - kinetic_interp)\n",
         "print(f\"Max Error {np.max(err)},  Mean Error {np.mean(err)},  Std Dev {np.std(err)}\")"
-      ],
-      "metadata": {
-        "collapsed": false,
-        "ExecuteTime": {
-          "end_time": "2023-05-18T16:48:09.998527980Z",
-          "start_time": "2023-05-18T16:48:08.697737663Z"
-        }
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "collapsed": false
+      },
       "source": [
         "### Solving Poisson Equation\n",
         "\n",
@@ -319,14 +370,18 @@
         "\n",
         "This can be used to calculate the electrostatic potential of a molecule with coordinates $\\{R_A\\}$ and charge $\\{Z_A\\}$:\n",
         "    $$\\Phi(\\textbf{r}_1) = -\\int \\frac{\\rho(\\textbf{r}_2)}{| \\textbf{r}_1 - \\textbf{r}_2 | } d\\textbf{r}_2 + \\sum_{A} \\frac{Z_A}{|\\textbf{r}_1 - R_A|}$$"
-      ],
-      "metadata": {
-        "collapsed": false
-      }
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": 7,
+      "metadata": {
+        "ExecuteTime": {
+          "end_time": "2023-05-18T16:48:35.841955440Z",
+          "start_time": "2023-05-18T16:48:12.316718019Z"
+        },
+        "collapsed": false
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -363,14 +418,7 @@
         "\n",
         "err = np.abs(desired_potential - actual_potential)\n",
         "print(f\"Max Error {np.max(err)},  Mean Error {np.mean(err)},  Std Dev {np.std(err)}\")"
-      ],
-      "metadata": {
-        "collapsed": false,
-        "ExecuteTime": {
-          "end_time": "2023-05-18T16:48:35.841955440Z",
-          "start_time": "2023-05-18T16:48:12.316718019Z"
-        }
-      }
+      ]
     }
   ],
   "metadata": {
