--- a/doc/notebooks/Molecular_Grid.ipynb
+++ b/doc/notebooks/Molecular_Grid.ipynb
@@ -190,11 +190,11 @@
         "from gbasis.evals.density import evaluate_density\n",
         "\n",
         "# Construct molecular basis from wave-function information read by IOData\n",
-        "basis, type = from_iodata(mol)\n",
+        "basis = from_iodata(mol)\n",
         "\n",
         "# Compute the electron density\n",
         "rdm = mol.one_rdms[\"scf\"]\n",
-        "electron_density = evaluate_density(rdm, basis, mol_grid.points, coord_type=type)\n",
+        "electron_density = evaluate_density(rdm, basis, mol_grid.points)\n",
         "\n",
         "# Integrate using the molecular grid\n",
         "print(f\"Integration of the electron density: {mol_grid.integrate(electron_density)}.\")"
@@ -291,7 +291,7 @@
         "\n",
         "# Evalaute using the interpolate\n",
         "inter_vals = interpolate(random_grid)\n",
-        "actual_vals = evaluate_density(rdm, basis, random_grid, coord_type=type)\n",
+        "actual_vals = evaluate_density(rdm, basis, random_grid)\n",
         "\n",
         "# Look at the error-difference\n",
         "err = np.abs(inter_vals - actual_vals)\n",
@@ -337,8 +337,8 @@
         "from gbasis.evals.density import evaluate_density_gradient\n",
         "\n",
         "# Computing the Weizsacker kinetic energy density\n",
-        "actual_deriv = evaluate_density_gradient(rdm, basis, random_grid, coord_type=type)\n",
-        "actual_dens = evaluate_density(rdm, basis, random_grid, coord_type=type)\n",
+        "actual_deriv = evaluate_density_gradient(rdm, basis, random_grid)\n",
+        "actual_dens = evaluate_density(rdm, basis, random_grid)\n",
         "norm_squared = np.linalg.norm(actual_deriv, axis=1) ** 2.0  # Take the norm-square of the gradient\n",
         "kinetic_dens = (1.0 / 8.0) * norm_squared / actual_dens\n",
         "\n",
@@ -397,7 +397,7 @@
         "from gbasis.evals.electrostatic_potential import electrostatic_potential\n",
         "\n",
         "# Compute the electron density\n",
-        "dens = evaluate_density(rdm, basis, mol_grid.points, coord_type=type)\n",
+        "dens = evaluate_density(rdm, basis, mol_grid.points)\n",
         "\n",
         "# Define a transformation from [0, \\infty) to finite interval [-1, 1]\n",
         "inverse_transf = InverseRTransform(BeckeRTransform(1e-30, R=1.5))\n",
@@ -412,7 +412,11 @@
         "\n",
         "# Calculate electrostatic potential with nuclear charges all set to zero.\n",
         "desired_potential = -electrostatic_potential(\n",
-        "    basis, rdm, random_grid, nuclear_coords=mol.atcoords, nuclear_charges=np.array([0, 0, 0, 0]), coord_type=type\n",
+        "    basis,\n",
+        "    rdm,\n",
+        "    random_grid,\n",
+        "    nuclear_coords=mol.atcoords,\n",
+        "    nuclear_charges=np.array([0, 0, 0, 0]),\n",
         ")\n",
         "actual_potential = potential(random_grid)\n",
         "\n",
